// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<div
  className="DelayedUiWrapper__Wrapper-qcmkwu-0 iGMkoW"
/>
`;

exports[`renders correctly 2`] = `
<div
  className="DelayedUiWrapper__Wrapper-qcmkwu-0 gvNTfy"
/>
`;
